fix: eave CSS vars, ISO layout (no overlap), color grid init, all old var refs migrated

--- a/style-iso.css
+++ b/style-iso.css
@@ -9,6 +9,7 @@
   display: flex;
   flex-direction: column;
   background: #fff;
+  position: relative;
 }
 
 /* TOOLBAR */
